# Pacsea

./: .SRCINFO  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  PKGBUILD  PKGBUILD-bin  PKGBUILD-git  PR_DESCRIPTION.md  Preflight_Impact_Map_Safe_Update_Mode.md  README.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  SECURITY.md  clippy.toml  deny.toml  details_cache.json  install_list.json  keybinds.conf  official_index.json  pacsea.code-workspace  recent_searches.json  rustfmt.toml
.cursor/commands/: announce-version.md  copilot-suggestion.md  pr-update.md  release-new.md  translate.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: arch-news-watcher.yml  codeql.yml  doc-rust.yml  release.yml  rust.yml  security.yml
Documents/: APT_Implementation.md  BASH_RISK_EVAL.md  DRY_RUN.md  FLATPAK_CONVERION.md  FLATPAK_CONVERSION_EXACT.md  RELEASE_v0.5.1.md  RELEASE_v0.5.3.md  RELEASE_v0.7.1.md  RELEASE_v0.7.2.md  RELEASE_v0.8.0.md  RELEASE_v0.8.1.md  SCANELF_CHECKSEC_SECURITY.md  SHELLCHECK_AUR-SLEUTH.md  SUSPICIOUS_PATTERNS.md  TESTS.md  aur-sleuth_overview.md
Release-docs/: RELEASE_v0.5.2.md  RELEASE_v0.7.3.md  RELEASE_v0.7.4.md  RELEASE_v0.8.2.md
config/: i18n.yml  keybinds.conf  pacsea.conf  repos.conf  settings.conf  theme.conf
config/examples/: repos.conf.example  repos_example.conf
config/locales/: de-DE.yml  en-US.yml  hu-HU.yml
data/: pacsea.desktop
dev/: AGENTS.md  ARCHITECTURE_CURRENT.md  ARCHITECTURE_OTHER.md  ControlFlow_Diagram.md  Demo.txt  FEATURE_PRIORITY.md  Makefile  PERFORMANCE_IMPLEMENTATION_PRIORITY.md  RELEASE_WORKFLOW.md  SECURITY_REMEDIATION_GUIDE.md  TERMINAL_PROCESS_ANALYSIS.md  aur-comments-viewer-5305cdad.plan.md  convert_to_svg.py  pacsea_demo_storyboard.md
dev/ANNOUNCEMENTS/: announcement.json  version_announcement_content.md
dev/ANNOUNCEMNTS/: announcement.json  version_announcement_content.md
dev/COMMIT/: COMMIT_MSG.md
dev/IMPROVEMENTS/: ARCHITECTURE_OTHER.md  BLACKARCH_SUPPORT_IMPLEMENTATION_PLAN.md  CLI_LIBRARY_INTEGRATORS.md  CLI_POSSIBLE_COMMANDS.md  DOAS_REPLACEMENT_IMPLEMENTATION_PLAN.md  EDITOR_VISUAL_IMPLEMENTATION_CONSIDERATIONS.md  FEATURE_PRIORITY.md  FINGERPRINT_AUTH_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_arch-toolkit.md  IMPLEMENTATION_PLAN_custom_repos.md  IMPLEMENTATION_PLAN_multi_pm_system_update_commands.md  IMPLEMENTATION_PLAN_sudo_v_keepalive.md  IMPLEMENTATION_PLAN_tui_integrated_config_editing.md  ISSUE_119_NUMPAD_ENTER_PASSWORD_PROMPT.md  NEWS_DATA_FETCHING_OPTIMIZATIONS.md  PACKAGE_MANAGEMENT_OPTIMIZATIONS.md  PASSWORDLESS_SUDO_IMPLEMENTATION_PLAN.md  PERFORMANCE_IMPLEMENTATION_PRIORITY.md  REFACTORING_EVALUATION.md  ROADMAP.md  SECURITY_REMEDIATION_GUIDE.md  TERMINAL_THEME_FALLBACK.md  improvement_suggestions.md  news_feed_implementation.md  pacsea_soname_plan.md  staged_review_potential_issues.md
dev/PLAN/: fix-aur-sleuth-tui-display-750be144.plan.md
dev/PR/: PR_dev-debug-improve.md  PR_feat-edit-visual-picker-REVIEW.md  PR_feat-extended-news.md  (+14 more)
doc/: crates.js  help.html  settings.html  src-files.js
docs/: PR_Description.md  hu-HU_review.md  index.html  preflight_optimization.md  search-index.js
locales/: de-DE.yml  en-US.yml  hu-HU.yml
repository/: mirrorlist.txt  mirrors.json
scripts/: complexity_report.sh
src/: announcements.rs  app.rs  events.rs  index.rs  install.rs  lib.rs  logic.rs  main.rs  net.rs  state.rs  test_utils.rs  theme.rs  ui.rs  ui_helpers.rs  util.rs
tests/: config_startup.rs  config_startup_shipped.rs  conflict_preservation.rs  cyclomatic_complexity.rs  data_flow_complexity.rs  downgrade.rs  downgrade_integration.rs  downgrade_ui.rs  file_sync.rs  install.rs  install_integration.rs  install_ui.rs  optional_deps_integration.rs  optional_deps_ui.rs  other.rs  pacsea_tests.rs  passwordless_sudo.rs  preflight_integration.rs  remove.rs  remove_integration.rs  remove_ui.rs  runtime_smoke.rs  scan.rs  scan_integration.rs  scan_ui.rs  system_update_integration.rs  system_update_ui.rs  terminals_args_shape.rs  ui_integration.rs  update.rs  update_flags.rs  update_single_integration.rs
(+2136 files in other folders)
