[package]
name = "pacsea"
version = "0.4.5"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"  # Maintained fork of deprecated serde_yaml
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
which = "8.0.0"

[dev-dependencies]
tempfile = "3.10"
