[package]
name = "pacsea"
version = "0.6.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"  # Maintained fork of deprecated serde_yaml
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "time"] }
unicode-width = "0.2.0"
which = "8.0.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
syntect = "5.0"
fuzzy-matcher = "0.3"
rpassword = "7.4.0"
scraper = "0.24.0"
chrono = "0.4"
portable-pty = "0.9"
strip-ansi-escapes = "0.2"
lru = "0.16.2"

[dev-dependencies]
tempfile = "3.10"
syn = { version = "2.0.111", features = ["full", "parsing", "extra-traits"] }

[lints.clippy]
# Enable cognitive complexity lint to catch overly complex functions
cognitive_complexity = "warn"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

# Ignored tests run with:
# cargo test -- --ignored