[package]
name = "pacsea"
version = "0.7.3"
edition = "2024"
authors = ["Firstpick <firstpick@users.noreply.github.com>"]
description = "A fast, friendly TUI for browsing and installing Arch and AUR packages with built-in news and security scanning"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Firstp1ck/Pacsea"
repository = "https://github.com/Firstp1ck/Pacsea"
documentation = "https://firstp1ck.github.io/Pacsea/pacsea/index.html"
keywords = ["tui", "archlinux", "aur", "package-manager", "terminal"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = [
    "Images/",
    "tests/",
    ".cursor/",
    ".github/",
    "AGENTS.md",
    "dev/",
]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_norway = "0.9"  # Maintained fork of deprecated serde_yaml
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "time"] }
unicode-width = "0.2.2"
which = "8.0.0"
reqwest = { version = "0.13.1", features = ["json"] }
futures = "0.3"
syntect = "5.0"
fuzzy-matcher = "0.3"
rpassword = "7.4.0"
scraper = "0.25.0"
chrono = "0.4.43"
portable-pty = "0.9"
strip-ansi-escapes = "0.2"
lru = "0.16.3"
ego-tree = "0.10.0"
rand = "0.9.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["poll", "fs"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.24.0"
syn = { version = "2.0.114", features = ["full", "parsing", "extra-traits"] }

[lints.clippy]
# Enable cognitive complexity lint to catch overly complex functions
cognitive_complexity = "warn"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
# Keep docs linting consistent with clippy naming
missing_docs_in_private_items = "warn"

[lints.rust]
missing_docs = "warn"
# Ignored tests run with:
# cargo test -- --ignored